--- a/index.html
+++ b/index.html
@@ -536,6 +536,15 @@
                         <span class="badge">Data Input</span>
                     </div>
                 </a>
+
+                <a href="picklistgenerator.html" class="nav-card">
+                    <div class="nav-card-content">
+                        <span class="nav-card-icon">📤</span>
+                        <h2>Picklist Generator</h2>
+                        <p>Import picklist and assign to a specifc job.</p>
+                        <span class="badge">Data Input</span>
+                    </div>
+                </a>
                 
                 <a href="jobsearch.html" class="nav-card">
                     <div class="nav-card-content">
